changed icons to unicode

--- a/projects/lightbox/src/lib/lightbox.component.scss
+++ b/projects/lightbox/src/lib/lightbox.component.scss
@@ -16,7 +16,7 @@
     max-width: 80%;
 }
 .close-button{
-    font-size: 50px;
+    font-size: 30px;
     color: white;
     position: fixed;
     right: 30px;
@@ -28,8 +28,6 @@
     right: 80px;
     top: 10px;
     cursor: pointer;
-}
-.download-button {
-    font-size: 50px;
-    color: white;
+    font-size: 30px;
+    margin-top: -5px;
 }
